Add link targets

--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,7 @@
                   <div class="details__section--item">
                       <h4>Where</h4>
                       <p>Summerour Studio <br>
-                      <a href="https://www.google.com/maps/place/409+Bishop+St+NW,+Atlanta,+GA+30318/@33.793715,-84.4034674,16.58z/data=!4m2!3m1!1s0x88f504f98a550a61:0x47c7f95cd079d957">409 Bishop St NW, Atlanta, GA 30318</a></p>
+                      <a href="https://www.google.com/maps/place/409+Bishop+St+NW,+Atlanta,+GA+30318/@33.793715,-84.4034674,16.58z/data=!4m2!3m1!1s0x88f504f98a550a61:0x47c7f95cd079d957" target="_blank">409 Bishop St NW, Atlanta, GA 30318</a></p>
                   </div>
                   <div class="details__section--item details__section--item">
                       <h4>Parking</h4>
@@ -121,30 +121,30 @@
               <h2 class="headline">Accomodations</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <div class="hotel">
-                  <a class="hotel__image" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">
+                  <a class="hotel__image" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes" target="_blank">
                     <img src="images/courtyard.jpg" alt="">
                   </a>
                   <aside class="hotel__details">
                       <h3>Courtyard by Marriott Atlanta Midtown</h3>
-                      <p class="hotel__details-address"><a href="https://www.google.com/maps/place/1132+Techwood+Dr+NW,+Atlanta,+GA+30318/@33.7855225,-84.3919676,17z/data=!4m2!3m1!1s0x88f5045ec415d615:0x5730361342d14d45">1132 Techwood Drive<br>Atlanta, GA  30318</a><br>1-800-321-2211</p>
+                      <p class="hotel__details-address"><a href="https://www.google.com/maps/place/1132+Techwood+Dr+NW,+Atlanta,+GA+30318/@33.7855225,-84.3919676,17z/data=!4m2!3m1!1s0x88f5045ec415d615:0x5730361342d14d45" target="_blank">1132 Techwood Drive<br>Atlanta, GA  30318</a><br>1-800-321-2211</p>
                       <p>Special Group Rate: $105/Night</p>
                       <p>To receive group rate, please ask for Evans/Daniel Wedding and book prior to February 18, 2016.</p>
                   </aside>
-                  <a class="hotel__cta" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">Book Online</a>
+                  <a class="hotel__cta" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes" target="_blank">Book Online</a>
                   <a class="hotel__cta" href="tel:8003212211">Call Hotel</a>
               </div>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon hotel__divider">
               <div class="hotel">
-                  <a class="hotel__image" href="https://aws.passkey.com/event/14194367/owner/1659924/home">
+                  <a class="hotel__image" href="https://aws.passkey.com/event/14194367/owner/1659924/home" target="_blank">
                     <img src="images/loews.jpg" alt="">
                   </a>
                   <aside class="hotel__details">
                       <h3>Loews Atlanta Hotel</h3>
-                      <p class="hotel__details-address"><a href="https://www.google.com/maps/place/Loews+Atlanta+Hotel/@33.7830284,-84.3833749,17z/data=!4m2!3m1!1s0x88f504430249f75b:0x8aa4c21acf9cc9f1">1065 Peachtree Street NE<br>Atlanta, GA 30309</a><br>1-404-745-5000</p>
+                      <p class="hotel__details-address"><a href="https://www.google.com/maps/place/Loews+Atlanta+Hotel/@33.7830284,-84.3833749,17z/data=!4m2!3m1!1s0x88f504430249f75b:0x8aa4c21acf9cc9f1" target="_blank">1065 Peachtree Street NE<br>Atlanta, GA 30309</a><br>1-404-745-5000</p>
                       <p>Special Group Rate: $159/Night</p>
                       <p>To receive group rate, please ask for Evans/Daniel Wedding and book prior to February 9, 2016.</p>
                   </aside>
-                  <a class="hotel__cta" href="https://aws.passkey.com/event/14194367/owner/1659924/home">Book Online</a>
+                  <a class="hotel__cta" href="https://aws.passkey.com/event/14194367/owner/1659924/home" target="_blank">Book Online</a>
                   <a class="hotel__cta" href="tel:4047455000">Call Hotel</a>
               </div>
             </div>
@@ -155,17 +155,17 @@
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <div class="registry-options">
                 <div class="registry-options__item">
-                  <a href="http://www.crateandbarrel.com/gift-registry/taylor-evans-and-richard-daniel-iii/r5399898">
+                  <a href="http://www.crateandbarrel.com/gift-registry/taylor-evans-and-richard-daniel-iii/r5399898" target="_blank">
                     <img src="images/cb.svg" alt="Crate and Barrell">
                   </a>
                 </div>
                 <div class="registry-options__item">
-                  <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=542598524&pwsurl=">
+                  <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=542598524&pwsurl=" target="_blank">
                     <img src="images/bbb.svg" alt="Bed Bath and Beyond">
                   </a>
                 </div>
                 <div class="registry-options__item">
-                  <a href="https://secure.williams-sonoma.com/registry/j5zkk692cl/registry-list.html">
+                  <a href="https://secure.williams-sonoma.com/registry/j5zkk692cl/registry-list.html" target="_blank">
                     <img src="images/ws.svg" alt="Williams Sonoma">
                   </a>
                 </div>
@@ -176,11 +176,11 @@
             <div class="container__content container__enclosed">
               <h2 class="headline">Atlanta Favorites</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
-              <p class="favorites__description">We want you to enjoy yourself while you're visiting Atlanta, so we made a list of some of our favorite spots around the city. For additional  ATL recommendations, visit <a href="http://atlanta.eater.com/">eater.atlanta.com</a> and <a href="http://www.atlanta.net/">atlanta.net</a>, or just ask us!</p>
+              <p class="favorites__description">We want you to enjoy yourself while you're visiting Atlanta, so we made a list of some of our favorite spots around the city. For additional  ATL recommendations, visit <a href="http://atlanta.eater.com/" target="_blank">eater.atlanta.com</a> and <a href="http://www.atlanta.net/" target="_blank">atlanta.net</a>, or just ask us!</p>
               <h2 class="favorites__headline">West Side</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="http://www.starprovisions.com/" class="favorites__image">
+                      <a href="http://www.starprovisions.com/" target="_blank" class="favorites__image">
                           <img src="images/starprovisions.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -189,7 +189,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://www.taqueriadelsol.com/" class="favorites__image">
+                      <a href="http://www.taqueriadelsol.com/" target="_blank" class="favorites__image">
                           <img src="images/taqueriadelsol.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -198,7 +198,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="https://www.facebook.com/littletroubleatl/" class="favorites__image">
+                      <a href="https://www.facebook.com/littletroubleatl/" target="_blank" class="favorites__image">
                           <img src="images/littletrouble.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -207,7 +207,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="https://jenis.com/scoop-shops/jenis-westside-provisions/" class="favorites__image">
+                      <a href="https://jenis.com/scoop-shops/jenis-westside-provisions/" target="_blank" class="favorites__image">
                           <img src="images/jenis.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -219,7 +219,7 @@
               <h2 class="favorites__headline">Midtown</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="http://www.mytakorea.com/" class="favorites__image">
+                      <a href="http://www.mytakorea.com/" target="_blank" class="favorites__image">
                           <img src="images/takorea.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -228,7 +228,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://www.tamarindseed.com/" class="favorites__image">
+                      <a href="http://www.tamarindseed.com/" target="_blank" class="favorites__image">
                           <img src="images/tamarind.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -237,7 +237,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://www.piedmontpark.org/" class="favorites__image">
+                      <a href="http://www.piedmontpark.org/" target="_blank" class="favorites__image">
                           <img src="images/piedmontpark.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -249,7 +249,7 @@
               <h2 class="favorites__headline">Inman Park / Old Fourth Ward</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="http://www.ladybirdatlanta.com/" class="favorites__image">
+                      <a href="http://www.ladybirdatlanta.com/" target="_blank" class="favorites__image">
                           <img src="images/ladybird.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -258,7 +258,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://www.vicsandwich.com/#info" class="favorites__image">
+                      <a href="http://www.vicsandwich.com/" target="_blank" class="favorites__image">
                           <img src="images/victory.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -267,7 +267,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://poncecitymarket.com/" class="favorites__image">
+                      <a href="http://poncecitymarket.com/" target="_blank" class="favorites__image">
                           <img src="images/ponce.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -276,7 +276,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://www.krogstreetmarket.com/" class="favorites__image">
+                      <a href="http://www.krogstreetmarket.com/" target="_blank" class="favorites__image">
                           <img src="images/krog.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -285,7 +285,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://www.thealbertatlanta.com/" class="favorites__image">
+                      <a href="http://www.thealbertatlanta.com/" target="_blank" class="favorites__image">
                           <img src="images/albert.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -294,7 +294,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://beltline.org/" class="favorites__image">
+                      <a href="http://beltline.org/" target="_blank" class="favorites__image">
                           <img src="images/beltline.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -306,7 +306,7 @@
               <h2 class="favorites__headline">Grant Park</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="http://www.daddydz.com/" class="favorites__image">
+                      <a href="http://www.daddydz.com/" target="_blank" class="favorites__image">
                           <img src="images/daddydzs.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -315,7 +315,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://riasbluebird.com/" class="favorites__image">
+                      <a href="http://riasbluebird.com/" target="_blank" class="favorites__image">
                           <img src="images/rias.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -324,7 +324,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="http://www.octanecoffee.com/grant-park-1" class="favorites__image">
+                      <a href="http://www.octanecoffee.com/grant-park-1" target="_blank" class="favorites__image">
                           <img src="images/octane.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
